--- a/package.json
+++ b/package.json
@@ -12,13 +12,26 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~11.2.10",
+    "@angular/cdk": "^11.2.12",
     "@angular/common": "~11.2.10",
     "@angular/compiler": "~11.2.10",
     "@angular/core": "~11.2.10",
     "@angular/forms": "~11.2.10",
+    "@angular/material": "^11.2.12",
     "@angular/platform-browser": "~11.2.10",
     "@angular/platform-browser-dynamic": "~11.2.10",
     "@angular/router": "~11.2.10",
+    "@auth0/angular-jwt": "^5.0.2",
+    "@fortawesome/angular-fontawesome": "^0.8.2",
+    "@fortawesome/fontawesome-free": "^5.15.3",
+    "@fortawesome/fontawesome-svg-core": "^1.2.34",
+    "@fortawesome/free-regular-svg-icons": "^5.15.2",
+    "@fortawesome/free-solid-svg-icons": "^5.15.2",
+    "boostrap": "^2.0.0",
+    "bootstrap": "^5.0.1",
+    "jwt-decode": "^3.1.2",
+    "lightweight-charts": "^3.3.0",
+    "ngx-pagination": "^5.1.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
